# hed

./: .gitignore  Cargo.toml  README.md  build.rs  cliff.toml  hosts  justfile  rustfmt.toml  taplo.toml
.github/workflows/: check.yml  release.yml
crates/hed_common/: Cargo.toml
crates/hed_common/src/: lib.rs  path_ext.rs
crates/hed_core/: Cargo.toml
crates/hed_core/fixture/: hosts
crates/hed_core/src/: channel.rs  error.rs  hed.rs  hosts_info.rs  ip_hosts.rs  lib.rs
crates/hed_core/src/snapshots/: hed_core__hosts_info__tests__hosts_info.snap
crates/hed_core/tests/: hed.rs  ip_hosts.rs
crates/hed_core/tests/snapshots/: hed__ip_hosts_map.snap  ip_hosts__ipv4.snap  ip_hosts__ipv6.snap
crates/hed_gui/: Cargo.toml
crates/hed_gui/src/: app.rs  main.rs  util.rs
fixture/: hosts
src/: consts.rs  core.rs  hed.rs  lib.rs  main.rs  util.rs
src/core/: channel.rs  hed.rs  hosts_info.rs  ip_hosts.rs  item.rs  item_form.rs  mod.rs  profile.rs  profile_form.rs  task_handler.rs  view_kind.rs
src/core/snapshots/: Hed__core__hosts_info__tests__hed_parse.snap  hed__core__hosts_info__tests__content_to_lines.snap  hed__core__hosts_info__tests__lines_to_content_human_read.snap  hed__core__hosts_info__tests__lines_to_content_mac.snap  hed__core__hosts_info__tests__lines_to_content_win.snap  hed__core__hosts_info__tests__lines_to_list.snap  hed__core__hosts_info__tests__lines_to_map.snap  hed__core__hosts_info__tests__map.snap  hed__core__hosts_info__tests__new_lines_by_list.snap
src/ui/: all_window.rs  common.rs  component.rs  dev_window.rs  edit_profile.rs  editor.rs  editor_header.rs  header.rs  left_side.rs  mod.rs  new_item.rs  new_profile.rs
src/ui/widgets/: mod.rs  profile_label.rs
src/util/: global_id.rs  is_ip.rs  mod.rs  string_ext.rs  sys_hosts_path.rs
