[package]
name = "hed"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "hosts file editor"
repository = "https://github.com/shixinhuang99/hed"
license = "MIT"
publish = false

[[bin]]
name = "Hed"
path = "src/main.rs"
test = false

[lib]
doc = false
doctest = false

[dependencies]
anyhow = "1.0.86"
eframe = { version = "0.28.1", default-features = false, features = [
  "default_fonts",
  "wgpu",
] }
egui = "0.28.1"
indexmap = "2.5.0"
insta = "1.39.0"
test-case = "3.3.1"
thiserror = "1.0.63"

[features]
_dev = []

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
