[package]
name = "hed_core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
doc = false
doctest = false

[dependencies]
indexmap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
test-case = { workspace = true }
